[package]
name = "moonshine-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde_json = "1.0.113"
tokio-postgres = { version = "0.7.10" }
env_logger = "0.11.1" # todo: remove
fjall = "0.6.2"
uuid = { version = "1.7.0", features = ["v7"] }
lazy_static = "1.4.0"
rmp-serde = "1.1.2"
deadpool = "0.10.0"
#bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bincode = "1.3.3"
rand = "0.8.5"
moonshine-db = { path = "../db" }
async-trait = "0.1.77"