[package]
name = "moonshine-db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde_json = "1.0.113"
env_logger = "0.11.1" # todo: remove
fjall = "0.6.2"
uuid = { version = "1.7.0", features = ["v4"] }
lazy_static = "1.4.0"
bincode = "1.3.3"
log = "0.4.20"
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
async-trait = "0.1.77"