[package]
name = "moonshine-lb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1.77"
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
env_logger = "0.11.2"
log = "0.4.20"
pingora = { version = "0.1", features = [ "lb" ] }